--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,5 @@ EMAIL_CODE_PEPPER=change_me_pepper
 # Google OAuth (Calendar)
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=http://localhost:4000/auth/google/callback
+GOOGLE_REDIRECT_URI=https://georgebackend-2.onrender.com/auth/google/callback
 TOKEN_ENCRYPTION_KEY=change_me_set_a_long_random_string
