--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PORT=4000
 MONGO_URI=mongodb://127.0.0.1:27017/mars_learning
 JWT_SECRET=change_me_please_make_it_longer
-CORS_ORIGIN=https://george-production.up.railway.app/
+CORS_ORIGIN=https://george-production.up.railway.app
 
 # Email verification (SMTP). If not set, backend logs codes to console (dev fallback).
 EMAIL_HOST=
