--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,12 @@ MONGO_URI=mongodb://127.0.0.1:27017/mars_learning
 JWT_SECRET=change_me_please_make_it_longer
 CORS_ORIGIN=https://george-production.up.railway.app
 
-# Email verification (SMTP). If not set, backend logs codes to console (dev fallback).
-EMAIL_HOST=
-EMAIL_PORT=
-EMAIL_USER=
+# Email verification (SMTP). Example: Chatess. If not set, backend logs codes to console (dev fallback).
+EMAIL_HOST=mail.chatess.com
+EMAIL_PORT=587
+EMAIL_USER=no-reply@chatess.com
 EMAIL_PASS=
-EMAIL_FROM="Mars Learning <no-reply@example.com>"
+EMAIL_FROM="Mars Learning <no-reply@chatess.com>"
 EMAIL_CODE_PEPPER=change_me_pepper
 
 # Google OAuth (Calendar)
